--- a/截断正太分布说明.md
+++ b/截断正太分布说明.md
@@ -1,4 +1,5 @@
 ##截断正态分布
+截断正态分布为对正态分布x加约束条件进行限制的分布。截断正态分布仍然满足概率密度函数总面积为1。
 ![](http://i.imgur.com/7QJTtbl.png)
 上式中，小写的 φ，表示：![](http://i.imgur.com/awQOlGP.png)
 
